--- a/deployment/mysql-pod.yaml
+++ b/deployment/mysql-pod.yaml
@@ -3,7 +3,7 @@ kind: Pod
 metadata:
   name: mysql
   labels:
-    name: mysql
+    app: mysql
 spec:
   containers:
   - name: mysql
@@ -17,4 +17,3 @@ spec:
       value: root
     ports:
       - containerPort: 3306
-
