--- a/demos/replicaset.yaml
+++ b/demos/replicaset.yaml
@@ -7,7 +7,8 @@ metadata:
 spec:
   replicas: 3
   selector:
-    app: nginx
+    matchLabels:
+      app: nginx
   template:
     metadata:
       name: nginx
