--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,7 @@
 spring.application.name=book-manager
-# spring.datasource.url=jdbc:mysql://localhost:3306/book_manager
-# spring.datasource.username=root
-# spring.datasource.password=root
+spring.datasource.url=jdbc:mysql://localhost:6033/book_manager
+spring.datasource.username=root
+spring.datasource.password=root
 lombok.equalsAndHashCode.callSuper = call
 
 spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MySQL8Dialect
